test/types/file/unableToOpenFile.good
unableToOpenFile.chpl:1: error: No such file or directory in open with path "_test_cannotOpenMe.txt"
